--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -25,8 +25,7 @@ header {
 .header-main {
   background-color: red;
   height: 30vh;
-}
-
-.header-main form {
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
